--- a/.github/workflows/gtc-validation-nuget.yml
+++ b/.github/workflows/gtc-validation-nuget.yml
@@ -41,7 +41,7 @@ jobs:
     environment: development
     strategy:
       matrix:
-        DOTNET_VERSION: ["8.x", "9.x", "10.x"]
+        DOTNET_VERSION: ["9.x"]
 
     env:
       RUNTIME_ENV: "Development"
