--- a/src/Goodtocode.Validation/Goodtocode.Validation.csproj
+++ b/src/Goodtocode.Validation/Goodtocode.Validation.csproj
@@ -4,6 +4,9 @@
 		<RootNamespace>Goodtocode.Validation</RootNamespace>
 		<AssemblyName>Goodtocode.Validation</AssemblyName>
 		<Version>1.0.0</Version>
+		<FileVersion>1.0.0.0</FileVersion>
+		<AssemblyVersion>1.0.0.0</AssemblyVersion>
+		<InformationalVersion>1.0.0+commit</InformationalVersion>
         <TargetFramework>netstandard2.1</TargetFramework>
 		<IsPackable>true</IsPackable>
 		<ImplicitUsings>enable</ImplicitUsings>
