try to disable explicitly

--- a/src/Goodtocode.Validation.Tests/Goodtocode.Validation.Tests.csproj
+++ b/src/Goodtocode.Validation.Tests/Goodtocode.Validation.Tests.csproj
@@ -9,6 +9,7 @@
     <OutputType>Exe</OutputType>
     <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
     <TestingPlatformShowTestsFailure>true</TestingPlatformShowTestsFailure>
+    <VSTestUseMSBuildOutput>false</VSTestUseMSBuildOutput>
   </PropertyGroup>
 
   <ItemGroup>
