--- a/.github/workflows/gtc-validation-nuget.yml
+++ b/.github/workflows/gtc-validation-nuget.yml
@@ -53,7 +53,7 @@ jobs:
       - name: dotnet version ${{ matrix.DOTNET_VERSION }}
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: ${{ matrix.DOTNET_VERSION }}
+          dotnet-version: 10.0.0
 
       - name: Get Semantic Version
         id: get_semver
@@ -87,15 +87,16 @@ jobs:
 
       - name: Test
         run: |
-          dotnet test ${{ env.SRC_PATH }}/${{ env.TEST_PATH }}/${{ env.TEST_PROJECT }} --verbosity normal
+          cd ${{ env.SRC_PATH }}/${{ env.TEST_PATH }}
+          dotnet run --configuration Release --no-build
         shell: pwsh
 
       - name: Copy test results
         if: ${{ always() }}
         run: |
           mkdir -p TestResults-${{ matrix.DOTNET_VERSION }}
-          if (Test-Path "${{ env.SRC_PATH }}/${{ env.TEST_PATH }}/TestResults") {
-            Copy-Item -Path "${{ env.SRC_PATH }}/${{ env.TEST_PATH }}/TestResults/*" -Destination "TestResults-${{ matrix.DOTNET_VERSION }}" -Recurse -Force
+          if (Test-Path "${{ env.SRC_PATH }}/${{ env.TEST_PATH }}/bin/Release/net10.0/TestResults") {
+            Copy-Item -Path "${{ env.SRC_PATH }}/${{ env.TEST_PATH }}/bin/Release/net10.0/TestResults/*" -Destination "TestResults-${{ matrix.DOTNET_VERSION }}" -Recurse -Force
           }
         shell: pwsh
 
