multi-target ci

--- a/src/Goodtocode.Validation.Tests/Goodtocode.Validation.Tests.csproj
+++ b/src/Goodtocode.Validation.Tests/Goodtocode.Validation.Tests.csproj
@@ -9,6 +9,8 @@
     <OutputType>Exe</OutputType>
     <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
     <TestingPlatformShowTestsFailure>true</TestingPlatformShowTestsFailure>
+    <TestingPlatformCaptureOutput>true</TestingPlatformCaptureOutput>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
