--- a/.github/workflows/gtc-validation-nuget.yml
+++ b/.github/workflows/gtc-validation-nuget.yml
@@ -53,7 +53,7 @@ jobs:
       - name: dotnet version ${{ matrix.DOTNET_VERSION }}
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 10.0.0
+          dotnet-version: ${{ matrix.DOTNET_VERSION }}
 
       - name: Get Semantic Version
         id: get_semver
