--- a/.github/workflows/gtc-validation-nuget.yml
+++ b/.github/workflows/gtc-validation-nuget.yml
@@ -19,6 +19,10 @@ on:
         description: "Environment to run"
         required: true
         default: "development"
+      runcd:
+        description: "Run CD pipeline"
+        required: true
+        default: "false"
 
 permissions:
   id-token: write
@@ -26,6 +30,7 @@ permissions:
   security-events: write
 
 env:
+  CONFIGURATION: "Release"
   SCRIPTS_PATH: "./.github/scripts"
   SRC_PATH: "./src"
   PROJECT_PATH: "Goodtocode.Validation"
@@ -33,6 +38,7 @@ env:
   SRC_SLN: "Goodtocode.Validation.sln"
   TEST_PATH: "Goodtocode.Validation.Tests"
   TEST_PROJECT: "Goodtocode.Validation.Tests.csproj"
+
 jobs:
   ci:
     name: "NuGet CI"
@@ -42,9 +48,11 @@ jobs:
     strategy:
       matrix:
         DOTNET_VERSION: ["10.x"]
-
     env:
       RUNTIME_ENV: "Development"
+      CONFIGURATION: "Release"
+      VERSION_MAJOR: '1'
+      VERSION_MINOR: '1'
 
     steps:
       - name: checkout
@@ -56,16 +64,19 @@ jobs:
           dotnet-version: ${{ matrix.DOTNET_VERSION }}
 
       - name: Get Semantic Version
-        id: get_semver
+        id: get_version
         run: |
-          $json = & "${{ env.SCRIPTS_PATH }}/ci/Get-Version.ps1" -Major 1 -Minor 1 -Patch $env:GITHUB_RUN_NUMBER
-          $semver = ($json | ConvertFrom-Json).SemanticVersion
-          echo "SEMANTIC_VERSION=$semver" >> $env:GITHUB_OUTPUT
+          $json = & "${{ env.SCRIPTS_PATH }}/ci/Get-Version.ps1" -Major ${{ env.VERSION_MAJOR }} -Minor ${{ env.VERSION_MINOR }} -Patch $env:GITHUB_RUN_NUMBER
+          $versionObj = ($json | ConvertFrom-Json)
+          echo "SEMANTIC_VERSION=$($versionObj.SemanticVersion)" >> $env:GITHUB_OUTPUT
+          echo "FILE_VERSION=$($versionObj.FileVersion)" >> $env:GITHUB_OUTPUT
+          echo "ASSEMBLY_VERSION=$($versionObj.AssemblyVersion)" >> $env:GITHUB_OUTPUT
+          echo "INFORMATIONAL_VERSION=$($versionObj.InformationalVersion)" >> $env:GITHUB_OUTPUT
         shell: pwsh
 
       - name: Set-Version.ps1
         run: |
-          $version = ${{ env.SCRIPTS_PATH }}/ci/Set-Version.ps1 -Path ${{ env.SRC_PATH }} -VersionToReplace 1.0.0 -Major 1 -Minor 1
+          $version = ${{ env.SCRIPTS_PATH }}/ci/Set-Version.ps1 -Path ${{ env.SRC_PATH }} -VersionToReplace 1.0.0 -Major ${{ env.VERSION_MAJOR }} -Minor ${{ env.VERSION_MINOR }} -Patch $env:GITHUB_RUN_NUMBER
           echo $version
           echo "VERSION=$version" >> $GITHUB_ENV
         shell: pwsh
@@ -82,7 +93,7 @@ jobs:
 
       - name: Build
         run: |
-          dotnet build ${{ env.SRC_PATH }}/${{ env.SRC_SLN }} --configuration Release
+          dotnet build ${{ env.SRC_PATH }}/${{ env.SRC_SLN }} --configuration ${{ env.CONFIGURATION }}
         shell: pwsh
 
       - name: Test
@@ -109,7 +120,7 @@ jobs:
 
       - name: Pack NuGet package
         run: |
-          dotnet pack ${{ env.SRC_PATH }}/${{ env.PROJECT_PATH }}/${{ env.PROJECT_FILE }} --configuration Release --no-build --output nupkg_output --version ${{ steps.get_semver.outputs.SEMANTIC_VERSION }}
+          dotnet pack ${{ env.SRC_PATH }}/${{ env.PROJECT_PATH }}/${{ env.PROJECT_FILE }} --configuration ${{ env.CONFIGURATION }} --no-build --output nupkg_output --version ${{ steps.get_version.outputs.SEMANTIC_VERSION }}
         shell: pwsh
 
       - name: Upload NuGet package artifact
@@ -120,12 +131,30 @@ jobs:
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v4
+        if: ${{ !github.event.repository.private }}
+
+      - name: Run Coverage Script
+        run: |
+          pwsh ${{ env.SRC_PATH }}/Get-CodeCoverage.ps1 `
+            -TestProjectFilter '${{ env.TEST_PROJECT }}' `
+            -ProdPackagesOnly `
+            -ProductionAssemblies Core.Application Presentation.WebApi Presentation.Blazor
+        shell: pwsh
+
+      - name: Upload Coverage Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report-${{ matrix.DOTNET_VERSION }}
+          path: ${{ env.SRC_PATH }}/TestResults/Reports/**/index.html
+        if: ${{ always() }}
 
   cd:
     name: "NuGet CD"
     runs-on: ubuntu-latest
     needs: ci
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: |
+        (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
+        (github.event_name == 'workflow_dispatch' && (github.event.inputs.runcd == 'true' || github.event.inputs.runcd == true))
     environment: production
     strategy:
       matrix:
